<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginVertical="10dp"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/profile_container"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        >

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/profile_image"
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:src="@drawable/mock_avatar"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/profile_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:fontFamily="@font/sk_modernist"
            android:text="@string/profile_name_mock"
            android:textColor="@color/text_color_primary"
            android:textSize="16sp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toEndOf="@id/profile_image"
            tools:text="@string/profile_name_mock" />

        <TextView
            android:id="@+id/profile_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:fontFamily="@font/sk_modernist"
            android:text="@string/profile_date_mock"
            android:textColor="@color/text_color_additional"
            android:textSize="12sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@id/profile_image"
            app:layout_constraintVertical_chainStyle="packed"
            tools:text="@string/profile_date_mock" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/profile_review"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/sk_modernist"
        android:text="@string/profile_review_mock"
        android:textColor="@color/text_color_secondary"
        android:textSize="12sp"
        android:lineSpacingMultiplier="1.2"
        android:layout_marginTop="24dp"
        app:layout_constraintTop_toBottomOf="@id/profile_container"
        app:layout_constraintStart_toStartOf="parent"
        tools:text="@string/profile_review_mock" />

</androidx.constraintlayout.widget.ConstraintLayout>