<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_color"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_main_image_bottom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.45" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_logo_top"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.42" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_left"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.05" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_right"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.95" />


    <ImageView
        android:id="@+id/main_image"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:scaleType="centerCrop"
        android:src="@drawable/main_image"
        android:contentDescription="@string/app_name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/guideline_main_image_bottom"
        />


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/logo_container"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@id/guideline_left"
        app:layout_constraintTop_toBottomOf="@id/guideline_logo_top">

        <ImageView
            android:id="@+id/logo_image"
            android:layout_width="88dp"
            android:layout_height="88dp"
            android:contentDescription="@string/app_name"
            android:src="@drawable/logo"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/app_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="5dp"
            android:layout_marginStart="10dp"
            android:fontFamily="@font/sk_modernist"
            android:text="@string/application_title_mock"
            android:textColor="@color/text_color_primary"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@id/ratingBar_indicator"
            app:layout_constraintStart_toEndOf="@id/logo_image"
            app:layout_constraintVertical_chainStyle="packed"
            tools:text="@string/application_title_mock" />

        <RatingBar
            android:id="@+id/ratingBar_indicator"
            style="?android:attr/ratingBarStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="10dp"
            android:layout_marginHorizontal="10dp"
            android:rating="5"
            android:theme="@style/CustomRatingBar"
            app:layout_constraintBottom_toBottomOf="@id/logo_container"
            app:layout_constraintStart_toEndOf="@id/logo_image"
            tools:ignore="MissingConstraints" />

        <TextView
            android:id="@+id/app_rating_counter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/sk_modernist"
            android:text="@string/rating_counter_mock"
            android:textColor="@color/text_color_secondary"
            android:textSize="12sp"
            android:layout_marginHorizontal="5dp"

            app:layout_constraintBottom_toBottomOf="@+id/ratingBar_indicator"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toEndOf="@id/ratingBar_indicator"
            app:layout_constraintTop_toTopOf="@+id/ratingBar_indicator"
            tools:text="@string/rating_counter_mock" />

    </androidx.constraintlayout.widget.ConstraintLayout>


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/tag_list"
        android:layout_width="0dp"
        android:layout_height="30dp"
        android:layout_marginTop="5dp"
        app:layout_constraintStart_toStartOf="@id/guideline_left"
        app:layout_constraintEnd_toEndOf="@id/guideline_right"
        app:layout_constraintTop_toBottomOf="@id/logo_container"
        android:background="#238438"

        />

</androidx.constraintlayout.widget.ConstraintLayout>